Edited navigate to client page

--- a/MobileTsar/MobileTsar.Droid/packages.config
+++ b/MobileTsar/MobileTsar.Droid/packages.config
@@ -83,9 +83,10 @@
   <package id="Xamarin.Controls.SignaturePad.Forms" version="2.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms.Maps" version="2.3.4.270" targetFramework="monoandroid71" />
-  <package id="Xamarin.GooglePlayServices.Base" version="29.0.0.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.GooglePlayServices.Basement" version="29.0.0.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.GooglePlayServices.Maps" version="29.0.0.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Base" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="ZXing.Net.Mobile" version="2.2.9" targetFramework="monoandroid71" />
   <package id="ZXing.Net.Mobile.Forms" version="2.2.9" targetFramework="monoandroid71" />
 </packages>
