--- a/MobileTsar/MobileTsar.Windows/MobileTsar.Windows.csproj
+++ b/MobileTsar/MobileTsar.Windows/MobileTsar.Windows.csproj
@@ -225,6 +225,9 @@
       <Private>True</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
