--- a/MobileTsar/MobileTsar/MobileTsar.csproj
+++ b/MobileTsar/MobileTsar/MobileTsar.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiServices.cs" />
+    <Compile Include="ViewModels\AddNewClientPasswordViewModel.cs" />
     <Compile Include="ViewModels\AddNewTimesheetViewModel.cs" />
     <Compile Include="ViewModels\LocationViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
@@ -91,6 +92,9 @@
     </Compile>
     <Compile Include="Views\MapsPage.xaml.cs">
       <DependentUpon>MapsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewClientPasswordPage.xaml.cs">
+      <DependentUpon>NewClientPasswordPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RegisterPage.xaml.cs">
       <DependentUpon>RegisterPage.xaml</DependentUpon>
@@ -296,6 +300,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\ClientPasswordsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\NewClientPasswordPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
