--- a/MobileTsar/MobileTsar.Droid/packages.config
+++ b/MobileTsar/MobileTsar.Droid/packages.config
@@ -60,6 +60,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Geolocator" version="4.0.1" targetFramework="monoandroid71" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid70" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
