--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -53,4 +53,5 @@
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net452" />
   <package id="Twilio" version="5.6.4" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
+  <package id="ZXing.Net" version="0.16.2" targetFramework="net452" />
 </packages>
