--- a/TSAR/Web.config
+++ b/TSAR/Web.config
@@ -14,7 +14,7 @@
     <!--<connectionStrings>
       <add name="DefaultConnection" connectionString="Data Source=10.3.8.10;Initial Catalog=201726; user Id=201726; password=dcrAhAw6; Integrated Security=false;" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
-   <!--<connectionStrings>e
+   <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-TSAR-Local;Integrated Security=True" providerName="System.Data.SqlClient" />     
   </connectionStrings>-->
   
