--- a/MobileTsar/MobileTsar/MobileTsar.csproj
+++ b/MobileTsar/MobileTsar/MobileTsar.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Models\ClientPassword.cs" />
     <Compile Include="Models\Commission.cs" />
     <Compile Include="Models\Consultant.cs" />
+    <Compile Include="Models\ConsultantRegister.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\RegisterBindingModel.cs" />
     <Compile Include="Models\Timesheet.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiServices.cs" />
     <Compile Include="ViewModels\AddNewClientPasswordViewModel.cs" />
+    <Compile Include="ViewModels\AddNewConsultantRegisterViewModel.cs" />
     <Compile Include="ViewModels\AddNewTimesheetViewModel.cs" />
     <Compile Include="ViewModels\LocationViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
