--- a/MobileTsar/MobileTsar/MobileTsar.csproj
+++ b/MobileTsar/MobileTsar/MobileTsar.csproj
@@ -107,6 +107,9 @@
     <Compile Include="Views\ScanPage.xaml.cs">
       <DependentUpon>ScanPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SetPasswordPage.xaml.cs">
+      <DependentUpon>SetPasswordPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\TimesheetListViewPage.xaml.cs">
       <DependentUpon>TimesheetListViewPage.xaml</DependentUpon>
     </Compile>
@@ -325,6 +328,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\NoInternetPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\SetPasswordPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
