--- a/MobileTsar/MobileTsar.iOS/MobileTsar.iOS.csproj
+++ b/MobileTsar/MobileTsar.iOS/MobileTsar.iOS.csproj
@@ -247,6 +247,9 @@
   <ItemGroup>
     <BundleResource Include="Resources\HomeElephant.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\GeoBak.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
