--- a/MobileTsar/MobileTsar.Windows/MobileTsar.Windows.csproj
+++ b/MobileTsar/MobileTsar.Windows/MobileTsar.Windows.csproj
@@ -123,9 +123,14 @@
     <None Include="Windows_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\geo.jpg" />
+    <Content Include="Assets\GeoBak.jpg" />
+    <Content Include="Assets\HomeElephant.jpg" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
+    <Content Include="Assets\SplashScreen.scale-140.png" />
+    <Content Include="Assets\SplashScreen.scale-180.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
