changes to all asthetics

--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -366,6 +366,7 @@
     <Content Include="img\Elephant1.jpg" />
     <Content Include="img\elephant22.jpg" />
     <Content Include="img\Elephant3.jpg" />
+    <Content Include="img\GeoBak.jpg" />
     <Content Include="img\header-bg.jpg" />
     <Content Include="img\images\star_gold_16.png" />
     <Content Include="img\images\star_white_16.png" />
