--- a/API/Web.config
+++ b/API/Web.config
@@ -14,8 +14,11 @@
   <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TSAR1-Local.mdf;Initial Catalog=aspnet-TSAR-Local;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=tsarserv.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=dotcom1;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=devashen;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
