--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -7,6 +7,7 @@
   <package id="EFCodeFirst" version="0.8" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Grid.Mvc" version="3.0.0" targetFramework="net452" />
+  <package id="iTextSharp" version="5.0.5" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
@@ -45,6 +46,7 @@
   <package id="MvcScaffolding" version="1.0.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="RazorPDF" version="1.0.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.4" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net452" />
