--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -7,6 +7,7 @@
   <package id="EFCodeFirst" version="0.8" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Grid.Mvc" version="3.0.0" targetFramework="net452" />
+  <package id="iTextSharp-LGPL" version="4.1.6" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
