--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -467,7 +467,9 @@
     <None Include="Properties\PublishProfiles\TSAR1 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\TSAR1 - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\TSAR1 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\tsar2 - FTP %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\tsar2 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\tsar2 - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\tsar2 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
