--- a/TSAR.Tests/packages.config
+++ b/TSAR.Tests/packages.config
@@ -11,7 +11,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
-  <package id="RazorPDF" version="1.0.0" targetFramework="net452" />
+  <package id="Rotativa" version="1.6.3" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.4" targetFramework="net452" />
   <package id="Twilio" version="5.6.4" targetFramework="net452" />
 </packages>
