--- a/TSAR/Web.config
+++ b/TSAR/Web.config
@@ -8,18 +8,18 @@
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <!--<connectionStrings> this is the old database
+  <!--<connectionStrings> --><!--this is the old database--><!--
     <add name="DefaultConnection" connectionString="Data Source=tsarserv.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=dotcom1;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=tsarserv1.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=devashen;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
     <!--<connectionStrings>
       <add name="DefaultConnection" connectionString="Data Source=10.3.8.10;Initial Catalog=201726; user Id=201726; password=dcrAhAw6; Integrated Security=false;" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
-   <!--<connectionStrings>
+   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-TSAR-Local;Integrated Security=True" providerName="System.Data.SqlClient" />     
-  </connectionStrings>-->
+  </connectionStrings>
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
