--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -46,8 +46,8 @@
   <package id="MvcScaffolding" version="1.0.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="RazorPDF" version="1.0.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="Rotativa" version="1.6.3" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.4" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.3" targetFramework="net452" />
