--- a/MobileTsar/MobileTsar/MobileTsar.csproj
+++ b/MobileTsar/MobileTsar/MobileTsar.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Models\Consultant.cs" />
     <Compile Include="Models\ConsultantRegister.cs" />
     <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\Post.cs" />
     <Compile Include="Models\RegisterBindingModel.cs" />
     <Compile Include="Models\Timesheet.cs" />
     <Compile Include="Models\Travel.cs" />
@@ -60,6 +61,8 @@
     <Compile Include="ViewModels\AddNewClientPasswordViewModel.cs" />
     <Compile Include="ViewModels\AddNewConsultantRegisterViewModel.cs" />
     <Compile Include="ViewModels\AddNewTimesheetViewModel.cs" />
+    <Compile Include="ViewModels\NewPostViewModel.cs" />
+    <Compile Include="ViewModels\PostsViewModel.cs" />
     <Compile Include="ViewModels\LocationViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
@@ -86,6 +89,9 @@
     <Compile Include="Views\CustomMapPage.xaml.cs">
       <DependentUpon>CustomMapPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ForumListViewPage.xaml.cs">
+      <DependentUpon>ForumListViewPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
@@ -97,6 +103,9 @@
     </Compile>
     <Compile Include="Views\NewClientPasswordPage.xaml.cs">
       <DependentUpon>NewClientPasswordPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewPostPage.xaml.cs">
+      <DependentUpon>NewPostPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\NoInternetPage.xaml.cs">
       <DependentUpon>NoInternetPage.xaml</DependentUpon>
@@ -334,6 +343,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\SetPasswordPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ForumListViewPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\NewPostPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
